use less px values, fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,14 @@ main {
 }
 
 main h1 {
-    font-size: 4em;
+    font-size: 3.5em;
     font-weight: 900;
     text-align: center;
     margin: 0;
 }
 
 main h2 {
-    font-size: 36px;
+    font-size: 2.2em;
     font-weight: 800;
     text-align: center;
     margin: 0;
@@ -37,9 +37,8 @@ main p {
 }
 
 .lower-title {
-    padding: 0.5em 0;
+    padding: 0.1em 0;
 }
-
 
 .tag-line {
     text-align: center;
@@ -48,20 +47,18 @@ main p {
 }
 
 .cta-large {
-    font-size: 36px;
+    font-size: 1.9em;
     font-weight: 700;
-    width: 555px;
-    height: 105px;
     justify-self: center;
+    padding: 1em 3em 1em 3em;
     margin: 0.5em 0;
 }
 
 .cta-long {
     padding: 0.2em 2.5em;
-    font-size: 36px;
+    font-size: 1.9em;
     font-weight: 700;
-    width: 668px;
-    height: 54px;
+    margin-bottom: 0.4em;
 }
 
 .go-to-menu {
@@ -69,7 +66,6 @@ main p {
     align-self: center;
     display: flex;
     flex-direction: column;
-
     gap: 1em;
 }
 
@@ -82,16 +78,16 @@ main p {
     background-color: #292929;
     color: white;
     padding: 1em;
-    margin: 1em;
+    margin: 2em;
     border-radius: 13px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1em;
+    gap: 0.9em;
 }
 
 .menu-card h3 {
-    font-size: 26px;
+    font-size: 1.4em;
     font-weight: 700;
 }
 
@@ -110,6 +106,6 @@ main p {
 .menu-highlight-card-button {
     background-color: #CD4545;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 1.4em;
     padding: 0.2em 2.5em;
 }
